# matplotlib-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  Jenkinsfile  README.md  conanfile.py  conanfile.txt  klockworkKubernetes.yaml
cmake/: ccache.cmake  compiler-config.cmake  conan_auto_install.cmake  macros.cmake  openmp.cmake  stacktrace.cmake
cmake/modules/: FindPQXX.cmake  FindPostgreSQL.cmake
cmake/sanitizers/: FindASan.cmake  FindLSan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake  sanitize-exclude-helpers.cmake  sanitize-helpers.cmake
cmake/static-analysis/: FindStaticAnalysis.cmake  clang-tidy.cmake  code-coverage.cmake  cppcheck.cmake
docker/: Dockerfile  deployDockerImage.sh  docker-compose.yml
docs/: CMakeLists.txt
scripts/: check-clang-format.sh  check-cmake-format.sh  run-clang-format.sh  run-cmake-format.sh  run-code-format.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  TempClass.cpp  TempClass.hpp  main.cpp  router.cpp  router.hpp  router_helpers.hpp
src/app/test/: .clang-tidy  CMakeLists.txt  RunAllTests.cpp  TempClassTest.cpp  router_test.cpp
src/examples/: CMakeLists.txt  Sanitizer-example.cpp  animation.cpp  bar.cpp  basic.cpp  fill.cpp  fill_inbetween.cpp  imshow.cpp  minimal.cpp  modern.cpp  nonblock.cpp  quiver.cpp  subplot.cpp  surface.cpp  update.cpp  xkcd.cpp
src/lib/: CMakeLists.txt
src/lib/matplotlibcpp/: matplotlibcpp.h
